Fixed wrapping issue on project contaner
Modified display to be flex with a flex-flow: row wrap; value

--- a/styles.css
+++ b/styles.css
@@ -64,9 +64,9 @@ p {
 }
 .project-container {
   box-sizing: border-box;
-  display: grid;
+  display: flex;
   gap: 3rem;
-  grid-template-columns: 1fr 1fr;
+  flex-flow: row wrap;
 }
 .project-preview {
   overflow: hidden;
